cabal-version: 2.4
name:          lambda-repl
version:       0.0
synopsis:      An interpreter for the lambda calculus
author:        biomass-unit

executable lambda-repl
    main-is:            Main.hs
    hs-source-dirs:     src
    other-modules:      BU, AST, ParserCombinators, Parser
    build-depends:      base ^>=4.16
    ghc-options:        -Wall -Wno-name-shadowing
    default-language:   Haskell2010
    default-extensions: LambdaCase
                      , BlockArguments
                      , InstanceSigs
                      , DuplicateRecordFields
